@@ -28,46 +28,6 @@ use warnings;
 use EBox::Gettext;
 use EBox::Global;
 
-# Constants
-use constant SB_URL => 'https://store.zentyal.com/small-business-edition.html/?utm_source=zentyal&utm_medium=IDS&utm_campaign=smallbusiness_edition';
-use constant ENT_URL => 'https://store.zentyal.com/enterprise-edition.html/?utm_source=zentyal&utm_medium=IDS&utm_campaign=enterprise_edition';
-
-
-# Group: Public methods
-
-# Method: permanentMessage
-#
-#     Override to show a message depending on the subscription status
-#
-# Overrides:
-#
-#     <EBox::Model::Composite::permanentMessage>
-#
-sub permanentMessage
-{
-    my ($self) = @_;
-
-    unless ( $self->{advancedSec} ) {
-        my $securityUpdatesAddOn = 0;
-        if ( EBox::Global->modExists('remoteservices') ) {
-            my $rs = EBox::Global->modInstance('remoteservices');
-            $securityUpdatesAddOn = $rs->securityUpdatesAddOn();
-        }
-
-        unless ( $securityUpdatesAddOn ) {
-            $self->{permanentMessage} = $self->_commercialMsg();
-        }
-        $self->{advancedSec} = 1;
-    }
-
-    return $self->{permanentMessage};
-}
-
-sub permanentMessageType
-{
-    return 'ad';
-}
-
 # Group: Protected methods
 
 # Method: _description
@@ -87,17 +47,6 @@ sub _description
     };
 
     return $description;
-}
-
-# Group: Private methods
-
-# Commercial message
-sub _commercialMsg
-{
-    return __sx('Want to protect your system against the latest security threats, hacking attempts and attacks on security vulnerabilities? Get the {ohs}Small Business{ch} or {ohe}Enterprise Edition{ch} that include the IDS feature in the automatic security updates.',
-                ohs => '<a href="' . SB_URL . '" target="_blank">',
-                ohe => '<a href="' . ENT_URL . '" target="_blank">',
-                ch => '</a>');
 }
 
 1;
