@@ -1,3 +1,5 @@
+HEAD
+	+ Removed deprecated commercial message
 3.5
 	+ Set version to 3.5
 3.4
