@@ -1,4 +1,5 @@
 HEAD
+	+ Remove deprecated commertial message
 	+ Added missing use declaration in rules model
 3.0.2
 	+ Fixed wrong timestamp format
